# pypistats-cli

./: README.md  pyproject.toml
src/pypistats_cli/: api.py  config.py  display.py  main.py
