[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pypistats-cli"
version = "0.1.0"
description = "CLI tool for PyPI package analytics from pypistats.com"
readme = "README.md"
requires-python = ">=3.9"
license = "MIT"
authors = [{ name = "PyPI Stats" }]
keywords = ["pypi", "statistics", "analytics", "cli"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Software Development :: Libraries",
]
dependencies = [
    "click>=8.0",
    "httpx>=0.24",
    "rich>=13.0",
]

[project.scripts]
pypistats = "pypistats_cli.main:cli"

[project.urls]
Homepage = "https://pypistats.com"
Repository = "https://github.com/pypistats/pypistats-cli"
